A fix for bug#38377 - Options falcon_serial_log_dir does not have any effect