storage/falcon/Configuration.cpp
@@ -151,8 +151,14 @@ Configuration::Configuration(const char *configFile)
 		
 		if (!scanDir.isDirectory())
 			{
-			//throw SQLEXCEPTION (RUNTIME_ERROR, "Invalid serial log directory path \"%s\"", falcon_serial_log_dir);
-			serialLogDir = "";
+			fprintf(stderr, 
+					"Falcon: The specified serial log directory, \"%s\", "
+					"does not exist.\n"
+					"Falcon: The serial log directory must be created by "
+					"the user before initializing Falcon.\n", 
+					falcon_serial_log_dir
+				);
+			throw SQLEXCEPTION (FILE_ACCESS_ERROR, "Invalid serial log directory path \"%s\"", falcon_serial_log_dir);
 			}
 		}
 #else
